[project]
name = "atma15"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "daikichiba9511", email = "daikichiba.tech.ml@gmail.com" }
]
dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "xgboost>=1.7.6",
    "polars>=0.18.7",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "pyarrow>=12.0.1",
    "networkx>=3.1",
    "scikit-learn>=1.3.0",
    "gensim>=4.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []
dev-dependencies = [
    "jupyterlab>=4.0.3",
]

[tool.hatch.metadata]
allow-direct-references = true
